# regression-analysis

./: README.es.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
models/: modelo_multiple.pkl  modelo_notas.pkl
